--- a/application.properties
+++ b/application.properties
@@ -57,7 +57,7 @@ com.chemaxon.zetor.settings.indexDir=data/chemical-data/store
 com.chemaxon.zetor.settings.scheme=crdb
 com.chemaxon.zetor.settings.forcePurge=true
 com.chemaxon.zetor.settings.crdb.sqlBuilderProvider=POSTGRESQL
-com.chemaxon.zetor.settings.crdb.jdbcUrl=jdbc:postgresql://postgres:5432/zetor
+com.chemaxon.zetor.settings.crdb.jdbcUrl=jdbc:postgresql://10.32.1.216:5432/zetor
 com.chemaxon.zetor.settings.crdb.user=chemaxon
 com.chemaxon.zetor.settings.crdb.password=chemaxon
 com.chemaxon.zetor.settings.hazelcastConfigFile=/opt/chemaxon/jws/jws-db/config/hazelcastDocker.xml
@@ -66,7 +66,7 @@ com.chemaxon.zetor.settings.hazelcastConfigFile=/opt/chemaxon/jws/jws-db/config/
 com.chemaxon.zetor.additional.scheme=crdb
 com.chemaxon.zetor.additional.indexDir=data/extra-data/
 com.chemaxon.zetor.additional.crdb.sqlBuilderProvider=POSTGRESQL
-com.chemaxon.zetor.additional.crdb.jdbcUrl=jdbc:postgresql://postgres:5432/zetor
+com.chemaxon.zetor.additional.crdb.jdbcUrl=jdbc:postgresql://10.32.1.216:5432/zetor
 com.chemaxon.zetor.additional.crdb.user=chemaxon
 com.chemaxon.zetor.additional.crdb.password=chemaxon
 com.chemaxon.zetor.additional.hazelcastConfigFile=/opt/chemaxon/jws/jws-db/config/hazelcastDocker.xml
