--- a/application.properties
+++ b/application.properties
@@ -64,6 +64,14 @@ com.chemaxon.zetor.settings.crdb.cacheHazelcastInstance=true
 com.chemaxon.zetor.settings.hazelcastConfigFile=/opt/chemaxon/jws/jws-db/config/hazelcastDocker.xml
 
 com.chemaxon.zetor.additional.indexDir=data/extra-data/
+com.chemaxon.zetor.additional.scheme=crdb
+com.chemaxon.zetor.additional.forcePurge=true
+com.chemaxon.zetor.additional.crdb.sqlBuilderProvider=POSTGRESQL
+com.chemaxon.zetor.additional.crdb.jdbcUrl=jdbc:postgresql://10.32.1.216:5432/zetor
+com.chemaxon.zetor.additional.crdb.user=chemaxon
+com.chemaxon.zetor.additional.crdb.password=chemaxon
+com.chemaxon.zetor.additional.crdb.cacheHazelcastInstance=true
+com.chemaxon.zetor.additional.hazelcastConfigFile=/opt/chemaxon/jws/jws-db/config/hazelcastDocker.xml
 
 eureka.instance.lease-renewal-interval-in-seconds=1
 eureka.instance.lease-expiration-duration-in-seconds=3
